[package]
name = "bye"
version = "0.1.4"
edition = "2024"
description = "A library for graceful shutdown with no downtime"
license = "MIT OR Apache-2.0"

[dependencies]
memchr = "2.7.5"
nix = { version = "0.30.1", features = ["fs", "process", "signal", "event", "socket", "net"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "signal", "time"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = { version = "0.1.41", optional = true }

[features]
tracing = ["dep:tracing"]
